Added basic Actor with receive and mailbox processing capability