@@ -15,6 +15,10 @@ repositories {
     mavenCentral()
 }
 
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
+
 dependencies {
 
     implementation "io.etcd:jetcd-core:0.7.6"
@@ -40,5 +44,6 @@ java {
 
 tasks.named('test') {
     // Use JUnit Platform for unit tests.
+    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
 }
